// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render a flat button 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "minHeight": 48,
      "minWidth": 64,
      "opacity": 1,
      "paddingHorizontal": 8,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "height": 36,
          "justifyContent": "center",
          "paddingHorizontal": 8,
        },
        Object {
          "backgroundColor": "transparent",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Object {
            "color": "#05A5D1",
          },
        ]
      }
    >
      CANCEL
    </Text>
  </View>
</View>
`;

exports[`Button should render a raised button 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "minHeight": 48,
      "minWidth": 64,
      "opacity": 1,
      "paddingHorizontal": 8,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "height": 36,
          "justifyContent": "center",
          "paddingHorizontal": 8,
        },
        Object {
          "backgroundColor": "#05A5D1",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Object {
            "color": "#FAFAFA",
          },
        ]
      }
    >
      HELLO
    </Text>
  </View>
</View>
`;
